[project]
name = "llm-provider-router"
version = "0.1.0"
description = "Small OpenAI-compatible key-router proxy for Ark model aliases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
llm-provider-router = "llm_provider_router.main:main"
llm-provider-router-front-proxy = "llm_provider_router.front_proxy:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
